Commit after generation of PIT Report

--- a/pom.xml
+++ b/pom.xml
@@ -9,22 +9,22 @@
     <version>1.0-SNAPSHOT</version>
 
     <properties>
-        <maven.compiler.source>19</maven.compiler.source>
-        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
-    <build>
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.pitest</groupId>
-                    <artifactId>pitest-maven</artifactId>
-                    <version>1.5.0</version>
-                </plugin>
-            </plugins>
-        </pluginManagement>
-    </build>
+<!--    <build>-->
+<!--        <pluginManagement>-->
+<!--            <plugins>-->
+<!--                <plugin>-->
+<!--                    <groupId>org.pitest</groupId>-->
+<!--                    <artifactId>pitest-maven</artifactId>-->
+<!--                    <version>1.15.3</version>-->
+<!--                </plugin>-->
+<!--            </plugins>-->
+<!--        </pluginManagement>-->
+<!--    </build>-->
 
     <dependencies>
         <!-- https://mvnrepository.com/artifact/junit/junit -->
@@ -34,12 +34,13 @@
             <version>4.13.2</version>
             <scope>test</scope>
         </dependency>
-        <!-- https://mvnrepository.com/artifact/org.pitest/pitest -->
+        <!-- https://mvnrepository.com/artifact/org.pitest/pitest-maven -->
         <dependency>
             <groupId>org.pitest</groupId>
-            <artifactId>pitest</artifactId>
+            <artifactId>pitest-maven</artifactId>
             <version>1.15.3</version>
         </dependency>
+
 
 
     </dependencies>
