--- a/pom.xml
+++ b/pom.xml
@@ -45,4 +45,55 @@
 
     </dependencies>
 
+    <build>
+        <plugins>
+<!--            <plugin>-->
+<!--                <groupId>org.springframework.boot</groupId>-->
+<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
+<!--            </plugin>-->
+            <plugin>
+                <groupId>org.pitest</groupId>
+                <artifactId>pitest-maven</artifactId>
+                <version>1.15.3</version>
+                <configuration>
+                    <targetClasses>
+                        <param>org.OOPS.*</param>
+                        <param>org.example.AllPossibleParenthesis</param>
+                        <param>org.example.BFS</param>
+                        <param>org.example.BinarySearch</param>
+                        <param>org.example.CombinationSum</param>
+                        <param>org.example.DFS</param>
+                        <param>org.example.Fibonacci</param>
+                        <param>org.example.GridUniquePaths</param>
+                        <param>org.example.InsertionSort</param>
+                        <param>org.example.MergeSort</param>
+                        <param>org.example.PrimsAlgorithm</param>
+                        <param>org.example.RottenOranges</param>
+                        <param>org.example.SelectionSort</param>
+                        <param>org.example.ShipCapacityDdays</param>
+
+
+
+                    </targetClasses>
+
+                    <mutators>
+                        <mutator>NEGATE_CONDITIONALS</mutator>
+                        <mutator>INCREMENTS</mutator>
+                        <mutator>MATH</mutator>
+                        <mutator>CONDITIONALS_BOUNDARY</mutator>
+                        <mutator>INVERT_NEGS</mutator>
+                        <mutator>NULL_RETURNS</mutator>
+                        <mutator>TRUE_RETURNS</mutator>
+                        <mutator>VOID_METHOD_CALLS</mutator>
+                        <mutator>NON_VOID_METHOD_CALLS</mutator>
+                        <mutator>VOID_METHOD_CALLS</mutator>
+                        <mutator>EXPERIMENTAL_ARGUMENT_PROPAGATION</mutator>
+                        <mutator>EMPTY_RETURNS</mutator>
+
+                    </mutators>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
